2003-07-31  Richard Henderson  <rth@twiddle.net>

	* src/cairo_color.c (CAIRO_COLOR_DEFAULT): Mark const.
	* src/cairo_matrix.c (CAIRO_MATRIX_IDENTITY): Likewise.
	* src/cairo_path.c (num_args): Likewise.
	* src/cairo_path_bounds.c (_cairo_path_bounds): Likewise for cb.

2003-07-31  Richard Henderson  <rth@twiddle.net>

	* cairo.pc.in: Depend on slim.
	* configure.in: Check for slim.

	* src/cairo.h: Include slim_{export,import}.h as needed; mark all
	symbols __external_linkage.
	* src/cairoint.h: Include slim_internal.h; mark all symbols
	__internal_linkage.  Provide slim_hidden_proto symbols as needed.
	* src/cairo.c, src/cairo_matrix.c, src/cairo_surface.c,
	Provide slim_hidden_def symbols as needed.
	* src/cairo_traps.c (cairo_traps_add_trap): Mark static.
	(cairo_traps_add_trap_from_points): Likewise.

2003-07-30  Carl Worth  <cworth@isi.edu>

	* configure.in (LIBIC_REQUIRED): Fixed some typos in the libic
	PKG_CHECK.

	* src/cairoint.h: 
	* src/cairo.c: Fixed a disagreement over whether some internal
	cairo_gstate_t functions had an '_' prefix or not.

	* src/cairo_traps.c (_line_segs_intersect_ceil): Add one more
	conditional intersect to push past some fill bugs.

	* src/cairo_surface.c (cairo_surface_create_for_drawable):
	(cairo_surface_create_for_image):
	(cairo_surface_put_image):
	(_cairo_surface_pull_image):
	(_cairo_surface_push_image):
	(cairo_surface_set_matrix):
	(cairo_surface_get_matrix):
	(cairo_surface_set_repeat):
	(_cairo_surface_composite):
	(_cairo_surface_fill_rectangle):
	(_cairo_surface_fill_rectangles):
	(_cairo_surface_composite_trapezoids): Absorb all functionality
	previously in the Xc library.

	* src/cairo_pen.c (_cairo_pen_init): Don't store floating point
	theta in the pen. Instead, sort vertices by fixed point slope
	comparisons.
	(_cairo_pen_add_points): Fixed to remove duplicate pen vertices
	appearing at beginning and end of vertex array.
	(_pen_vertex_compare): New fixed-point "angle" comparison for pen